# JARVIS-V1

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
scripts/: eval-guide-rag.ps1  start-local-model.ps1  stop-local-model.ps1
src/: chat_api.rs  gui.rs  guide_knowledge.rs  lib.rs  main.rs
tests/: chat_api_http.rs  guide_knowledge_eval.rs
