[package]
name = "LocalAI"
version = "0.1.0"
edition = "2021"

[lib]
name = "localai"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.31"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
unicode-normalization = "0.1"

[dev-dependencies]
httpmock = "0.7"
